--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
               <dd><a href="https://github.com/shahashka">Github</a></dd>
-              <dd><a href="www.linkedin.com/in/shahashka9/">LinkedIn</a></dd>
+              <dd><a href="https://linkedin.com/in/shahashka9">LinkedIn</a></dd>
             </div>
             
             
