--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" type="image/x-icon" href="icon.png">
+
 </head>
 <body>
 
@@ -96,17 +98,17 @@ Genome-Scale Biological Network Recovery </a>Ashka Shah, Arvind Ramanathan, Vale
 
                 <ul>
                 <li class="paper" words="cancer, deep learning, interpretability"><a href="https://web.cels.anl.gov/~woz/papers/Counterfactuals_2021.pdf">Probing Decision Boundaries in Cancer Data Using
-Noise Injection and Counterfactual Analysis </a>Rajeev Jain, Ashka Shah,  Jamaludin Mohd-Yusof, Justin M. Wozniak,  Thomas S. Brettin, Fangfang Xia, Rick Stevens</li>
+Noise Injection and Counterfactual Analysis </a> Rajeev Jain, <b>Ashka Shah</b>,  Jamaludin Mohd-Yusof, Justin M. Wozniak,  Thomas S. Brettin, Fangfang Xia, Rick Stevens</li>
                 </ul>
 
                 <ul>
                 <li class="paper" words="drug discovery, virtual screening, chemical space"><a href="https://arxiv.org/abs/2109.05012">Scaffold-Induced Molecular Graph (SIMG):
-                    Effective Graph Sampling Methods for High-Throughput Computational Drug Discovery</a>Austin Clyde, Ashka Shah, Max Zvyagin, Arvind Ramanathan, Rick Stevens</li>
+                    Effective Graph Sampling Methods for High-Throughput Computational Drug Discovery</a> Austin Clyde, <b>Ashka Shah</b>, Max Zvyagin, Arvind Ramanathan, Rick Stevens</li>
                 </ul>
 
                 <ul>
                 <li class="paper" words="drug discovery, virtual screening, workflows, deep learning"><a href="https://dl.acm.org/doi/10.1145/3472456.3473524">
-                    IMPECCABLE: Integrated Modeling PipelinE for COVID Cure by Assessing Better LEads </a></li>
+                    IMPECCABLE: Integrated Modeling PipelinE for COVID Cure by Assessing Better LEads </a> (full list of authors in link)</li>
                 </ul>
             </div>
 
@@ -118,7 +120,7 @@ Noise Injection and Counterfactual Analysis </a>Rajeev Jain, Ashka Shah,  Jamalu
     <!-- /.container -->
     
     <!-- Other people may like it too! -->
-    <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Plain Academic</a> 
+    <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Plain academic template found here! </a>
     
 </body>
 
