--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="image/png" sizes="32x32" href="icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icon.png">
 
 </head>
 <body>
@@ -52,7 +52,7 @@
 <div class="col-md-8" style="height: 100vh; height: auto; text-align:justify; line-height:10px; font-size:65%; display:block;">
 
                 <!-- Main Image -->
-                <img align="middle" ;="" style="display:block; height: 50%; width: 50%; margin-left: auto; margin-right: auto" class="img-responsive" src="photo.jpg" alt="Ashka Shah headshot">
+                <img align="middle" ;="" style="display:block; height: 50%; width: 50%; margin-left: auto; margin-right: auto" class="img-responsive" src="img/photo.jpg" alt="Ashka Shah headshot">
 
 		<div style="margin-top:3%; text-align:justify;">
 			<p>
