--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 		<div style="margin-top:3%; text-align:justify;">
 			<p>
 				</p><h4 style="font-size: 17.5px;"> Hi, I'm Ashka Shah. I'm a fourth-year PhD student at the University
-            of Chicago, advised by Rick Stevens. I am interested in accelerating discovery in science with AI and autonomous experimentation. My recent
-            work is on causal discovery and optimal experimental design for recovering causal links gene regulatory networks.<br>
+            of Chicago, advised by Rick Stevens. I am interested in accelerating discovery in biology with AI and autonomous experimentation. My recent
+            work is on causal discovery and optimal experimental design for recovering causal links in gene regulatory networks.<br>
 					<br>
 					I did my undergraduate at Harvey Mudd College, majoring in physics. After that, I worked at the National Ignition
-            Facility at Lawrence Livermore National Laboratory where I wrote parallel scientific code for simulating laser physics. <br>
+            Facility where I wrote code for simulating laser physics. <br>
 					<br>
             </h4>
    		        <p></p>
