--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  <ul class="nav navbar-nav">
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="#publications">Publications</a></li>
-				  <li><a href="resume.pdf">CV</a></li>
+				  <li><a href="CV.pdf">CV</a></li>
 		  </ul>
 		</div>
 	  </div>
