add causal discovery paper

--- a/index.html
+++ b/index.html
@@ -68,12 +68,11 @@
                 <!-- Publications -->
             <div class="col-md-8" style="height: 100vh; width: 80vh; font-size: 10pt; line-height: 1 ">
                 <h2 id="publications">Publications</h2>
-            <!--
+
                 <ul>
-                <li class="paper" words="causality, structure learning, optimal experimental design"><a href="#">Causal Discovery and Optimal Experimental Design for
-Genome-Scale Biological Network Recovery </a>Ashka Shah, Arvind Ramanathan, Valerie Hayot-Sasson Rick Stevens</li>
+                <li class="paper" words="causality, structure learning, optimal experimental design"><a href="https://arxiv.org/abs/2304.03210">Causal Discovery and Optimal Experimental Design for
+                    Genome-Scale Biological Network Recovery </a> <b>Ashka Shah</b>, Arvind Ramanathan, Valerie Hayot-Sasson Rick Stevens</li>
                 </ul>
-              -->
 
                 <ul>
                 <li class="paper" words="cancer, deep learning, interpretability"><a href="https://web.cels.anl.gov/~woz/papers/Counterfactuals_2021.pdf">Probing Decision Boundaries in Cancer Data Using
