end of '23 update

--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
 <div class="col-md-8" style="height: 100vh; height: auto; text-align:justify; line-height:10px; font-size:65%; display:block;">
 		<div style="margin-top:3%; text-align:justify;">
 			<p>
-				</p><h4 style="font-size: 17.5px;"> Hi, I'm Ashka Shah. I'm a fourth-year Ph.D. student at the University
+				</p><h4 style="font-size: 17.5px;"> Hi, I'm Ashka Shah. I'm a fifth-year Ph.D. student at the University
             of Chicago, advised by <a href="https://cs.uchicago.edu/people/rick-stevens/">Rick Stevens</a>.
-            I am interested in accelerating discovery for high-dimensional problems in biology with AI and autonomous experimentation. My recent
+            I am interested in accelerating discovery for high-dimensional problems in science with AI and autonomous experimentation. My recent
             work is on causal discovery and optimal experimental design for recovering causal links in genome-scale networks.<br>
 					<br>
-					I did my undergraduate at Harvey Mudd College, majoring in physics. After that, I worked at the
+					I did my undergraduate degree at Harvey Mudd College, majoring in physics. After that, I worked at the
             <a href="https://lasers.llnl.gov/">National Ignition Facility</a> where I wrote code for
             <a href="https://computing.llnl.gov/projects/virtual-beamline-code">simulating laser physics.</a> <br>
-            For the past two summers, I interned at Argonne National Laboratory working in the <a href="https://rpl.cels.anl.gov/">Rapid Prototyping Lab</a> for autonomous experimentation.
+            Last summer, I interned at the Flatiron Institute in <a href="https://function.princeton.edu/">Olga Troyanksaya's lab</a> working on causal discovery
+            of human tissue-specific gene regulatory networks. Prior to that I interned at Argonne National Laboratory working in the <a href="https://rpl.cels.anl.gov/">Rapid Prototyping Lab</a> for autonomous experimentation.
 					<br>
             </h4>
    		        <p></p>
@@ -70,7 +71,7 @@
                 <h2 id="publications">Publications</h2>
 
                 <ul>
-                <li class="paper" words="causality, structure learning, optimal experimental design"><a href="https://arxiv.org/abs/2304.03210">Causal Discovery and Optimal Experimental Design for
+                <li class="paper" words="causality, structure learning, optimal experimental design"><a href="https://dl.acm.org/doi/abs/10.1145/3592979.3593400">Causal Discovery and Optimal Experimental Design for
                     Genome-Scale Biological Network Recovery </a> <b>Ashka Shah</b>, Arvind Ramanathan, Valerie Hayot-Sasson Rick Stevens</li>
                 </ul>
 
