--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				</p><h4 style="font-size: 17.5px;"> Hi, I'm Ashka Shah. I'm a fifth-year Ph.D. student at the University
             of Chicago, advised by <a href="https://cs.uchicago.edu/people/rick-stevens/">Rick Stevens</a>.
             I am interested in accelerating discovery for high-dimensional problems in science with AI and autonomous experimentation. My recent
-            work is on causal discovery and optimal experimental design for recovering causal links in genome-scale networks.<br>
+            work is on causal discovery with graph partitioning for recovering causal links in genome-scale networks.<br>
 					<br>
 					I did my undergraduate degree at Harvey Mudd College, majoring in physics. After that, I worked at the
             <a href="https://lasers.llnl.gov/">National Ignition Facility</a> where I wrote code for
@@ -69,10 +69,13 @@
                 <!-- Publications -->
             <div class="col-md-8" style="height: 100vh; width: 80vh; font-size: 10pt; line-height: 1 ">
                 <h2 id="publications">Publications</h2>
-
+                <ul>
+                  <li class="paper" words="causal discovery, graph partitioning, biological networks">Causal Discovery over High-Dimensional Structured Hypothesis Spaces with 
+                    Causal Graph Partitioning <b>Ashka Shah</b>, Adela DePavia, Nathaniel Hudson, Ian Foster, Rick Stevens</li>
+                  </ul>
                 <ul>
                 <li class="paper" words="causality, structure learning, optimal experimental design"><a href="https://dl.acm.org/doi/abs/10.1145/3592979.3593400">Causal Discovery and Optimal Experimental Design for
-                    Genome-Scale Biological Network Recovery </a> <b>Ashka Shah</b>, Arvind Ramanathan, Valerie Hayot-Sasson Rick Stevens</li>
+                    Genome-Scale Biological Network Recovery </a> <b>Ashka Shah</b>, Arvind Ramanathan, Valerie Hayot-Sasson, Rick Stevens</li>
                 </ul>
 
                 <ul>
