--- a/index.html
+++ b/index.html
@@ -71,26 +71,26 @@
                 <h2 id="publications">Publications</h2>
                 <ul>
                   <li class="paper" words="causal discovery, graph partitioning, biological networks">Causal Discovery over High-Dimensional Structured Hypothesis Spaces with 
-                    Causal Graph Partitioning <b>Ashka Shah</b>, Adela DePavia, Nathaniel Hudson, Ian Foster, Rick Stevens</li>
+                    Causal Graph Partitioning <br> <b>Ashka Shah</b>, Adela DePavia, Nathaniel Hudson, Ian Foster, Rick Stevens</li>
                   </ul>
                 <ul>
                 <li class="paper" words="causality, structure learning, optimal experimental design"><a href="https://dl.acm.org/doi/abs/10.1145/3592979.3593400">Causal Discovery and Optimal Experimental Design for
-                    Genome-Scale Biological Network Recovery </a> <b>Ashka Shah</b>, Arvind Ramanathan, Valerie Hayot-Sasson, Rick Stevens</li>
+                    Genome-Scale Biological Network Recovery </a> <br> <b>Ashka Shah</b>, Arvind Ramanathan, Valerie Hayot-Sasson, Rick Stevens</li>
                 </ul>
 
                 <ul>
                 <li class="paper" words="cancer, deep learning, interpretability"><a href="https://web.cels.anl.gov/~woz/papers/Counterfactuals_2021.pdf">Probing Decision Boundaries in Cancer Data Using
-Noise Injection and Counterfactual Analysis </a> Rajeev Jain, <b>Ashka Shah</b>,  Jamaludin Mohd-Yusof, Justin M. Wozniak,  Thomas S. Brettin, Fangfang Xia, Rick Stevens</li>
+Noise Injection and Counterfactual Analysis </a> <br> Rajeev Jain, <b>Ashka Shah</b>,  Jamaludin Mohd-Yusof, Justin M. Wozniak,  Thomas S. Brettin, Fangfang Xia, Rick Stevens</li>
                 </ul>
 
                 <ul>
                 <li class="paper" words="drug discovery, virtual screening, chemical space"><a href="https://arxiv.org/abs/2109.05012">Scaffold-Induced Molecular Graph (SIMG):
-                    Effective Graph Sampling Methods for High-Throughput Computational Drug Discovery</a> Austin Clyde, <b>Ashka Shah</b>, Max Zvyagin, Arvind Ramanathan, Rick Stevens</li>
+                    Effective Graph Sampling Methods for <br> High-Throughput Computational Drug Discovery </a>   <br>Austin Clyde, <b>Ashka Shah</b>, Max Zvyagin, Arvind Ramanathan, Rick Stevens</li>
                 </ul>
 
                 <ul>
                 <li class="paper" words="drug discovery, virtual screening, workflows, deep learning"><a href="https://dl.acm.org/doi/10.1145/3472456.3473524">
-                    IMPECCABLE: Integrated Modeling PipelinE for COVID Cure by Assessing Better LEads </a> (full list of authors in link)</li>
+                    IMPECCABLE: Integrated Modeling PipelinE for COVID Cure by Assessing Better LEads </a> <br> (full list of authors in link)</li>
                 </ul>
             </div>
 	</div>
