--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <div class="col-md-8" style="height: 100vh; width: 80vh; font-size: 10pt; line-height: 1 ">
                 <h2 id="publications">Publications</h2>
                 <ul>
-                  <li class="paper" words="causal discovery, graph partitioning, biological networks">Causal Discovery over High-Dimensional Structured Hypothesis Spaces with 
-                    Causal Graph Partitioning <br> <b>Ashka Shah</b>, Adela DePavia, Nathaniel Hudson, Ian Foster, Rick Stevens</li>
+                  <li class="paper" words="causal discovery, graph partitioning, biological networks"><a href="https://arxiv.org/abs/2406.06348">Causal Discovery over High-Dimensional Structured Hypothesis Spaces with 
+                    Causal Graph Partitioning</a> <br> <b>Ashka Shah</b>, Adela DePavia, Nathaniel Hudson, Ian Foster, Rick Stevens</li>
                   </ul>
                 <ul>
                 <li class="paper" words="causality, structure learning, optimal experimental design"><a href="https://dl.acm.org/doi/abs/10.1145/3592979.3593400">Causal Discovery and Optimal Experimental Design for
