--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h2 id="publications">Publications</h2>
                 <ul>
                   <li class="paper" words="causal discovery, graph partitioning, biological networks"><a href="https://arxiv.org/abs/2406.06348">Causal Discovery over High-Dimensional Structured Hypothesis Spaces with 
-                    Causal Graph Partitioning</a> <br> <b>Ashka Shah</b>, Adela DePavia, Nathaniel Hudson, Ian Foster, Rick Stevens. <br> ICML AI for Science Workshop 2024 (Best Paper) </li>
+                    Causal Graph Partitioning</a> <br> <b>Ashka Shah</b>, Adela DePavia, Nathaniel Hudson, Ian Foster, Rick Stevens. <br> TMLR 2025, ICML AI for Science Workshop 2024 (Best Paper) </li>
                   </ul>
                 <ul>
                 <li class="paper" words="causality, structure learning, optimal experimental design"><a href="https://dl.acm.org/doi/abs/10.1145/3592979.3593400">Causal Discovery and Optimal Experimental Design for
