--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <div class="col-md-8" style="height: 100vh; height: auto; text-align:justify; line-height:10px; font-size:65%; display:block;">
 		<div style="margin-top:3%; text-align:justify;">
 			<p>
-				</p><h4 style="font-size: 17.5px;"> Hi, I'm Ashka Shah. I'm a fifth-year Ph.D. student at the University
-            of Chicago, advised by <a href="https://cs.uchicago.edu/people/rick-stevens/">Rick Stevens</a>.
+				</p><h4 style="font-size: 17.5px;"> Hi, I'm Ashka Shah. I'm a PhD candidate at the University
+            of Chicago, advised by <a href="https://cs.uchicago.edu/people/rick-stevens/">Rick Stevens</a> (expected graduation June 2026).
             I am interested in accelerating discovery for high-dimensional problems in science with AI and autonomous experimentation. My recent
             work is on causal discovery with graph partitioning for recovering causal links in genome-scale networks.<br>
 					<br>
